(env
 (dev
  (flags (:standard
          -strict-formats     ;; Disallows legacy formats.
          -strict-sequence    ;; Enforces the lhs of a sequence to have type `unit'.
          -safe-string        ;; Immutable strings.
          -bin-annot          ;; Dumps information per (file) module about types, bindings, tail-calls, etc. Used by some tools.
          -warn-error -a      ;; Do not treat warnings as errors.
          -g                  ;; Adds debugging information to the resulting executable / library.
 )))
 (release
  (flags (:standard
          ;; The following flags are the same as for the "dev" profile.
          -strict-formats -strict-sequence -safe-string -bin-annot -warn-error -a
  ))
  (ocamlopt_flags (:standard
                   -O3 ;; Applies (aggressive) optimisations to the resulting library.
 )))
 (ci      ;; Same as release, except warnings are treated as errors.
  (flags (:standard
          -strict-formats -strict-sequence -safe-string -bin-annot
          -warn-error @A      ;; Treat warnings as errors...
  ))
  (ocamlopt_flags (:standard -O3))
))

(library
 (name multicont)
 (public_name multicont)
 (modules multicont)
 (foreign_stubs
  (language c)
  (names fiber_primitives multicont))
)
