opam-version: "2.0"
maintainer: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
authors: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
synopsis: "Multi-shot continuations in OCaml"
description: "This library provides facilities for programming with multi-shot continuations in OCaml"
homepage: "https://github.com/dhil/ocaml-multicont"
dev-repo: "git+https://github.com/dhil/ocaml-multicont.git"
bug-reports: "https://github.com/dhil/ocaml-multicont"
license: "MIT"
version: "1.0"


build: [
  [ "dune" "subst" ] {dev}
  [ "dune" "build" "-p" name "-j" jobs ]
]

depends: [
  "ocaml" {>= "5.0"}
  "dune" {>= "2.9.0"}
]
