opam-version: "2.0"
maintainer: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
authors: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
synopsis: "Multi-shot continuations in OCaml"
description: "This library provides facilities for programming with multi-shot continuations in OCaml"
homepage: "https://github.com/dhil/ocaml-multicont"
dev-repo: "git+https://github.com/dhil/ocaml-multicont.git"
bug-reports: "https://github.com/dhil/ocaml-multicont"
license: "MIT"
version: "1.0.0-rc.1"


build: [
  [ make "all" ] {dev}
  [ make "byte" ]
]

install: [
  [ make "install" ]
  [ make "VERSION=%{version}%" "dune-package" ]
  [ make "VERSION=%{version}%" "META" ]
]

depends: [
  "ocaml" {>= "5.0"}
]
