opam-version: "2.0"
maintainer: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
authors: "Daniel Hillerström <daniel.hillerstrom@ed.ac.uk>"
synopsis: "Multi-shot continuations in OCaml"
description: "This library provides facilities for programming with multi-shot continuations in OCaml"
homepage: "https://github.com/dhil/ocaml-multicont"
dev-repo: "git+https://github.com/dhil/ocaml-multicont.git"
bug-reports: "https://github.com/dhil/ocaml-multicont"
license: "MIT"

build: [
  [ make "all" ]
]

depends: [
  "ocaml" {>= "5.0.0"}
]

install: [
  [ make "install" ]
]
