(executable
 (name nqueens)
 (modules nqueens)
 (modes byte_complete native)
 (flags (:standard (:include linking-flags.sexp)))
 (libraries multicont))


(executable
 (name generic_count)
 (modules generic_count)
 (modes byte_complete native)
 (flags (:standard (-cclib -L/home/dhil/.opam/5.00.0+trunk/lib/multicont)))
 (libraries multicont))

(rule
 (with-stdout-to linking-flags.sexp
  (run ./gen-linking-flags.sh)))

