(library
 (name multicont)
 (public_name multicont)
 (modes byte native)
 (foreign_stubs
  (language c)
  (mode byte)
  (flags :standard (:include c_byte_flags.sexp))
  (names multicont_stubs))
 (foreign_stubs
  (language c)
  (mode native)
  (flags :standard (:include c_native_flags.sexp))
  (names multicont_stubs)))

(rule
 (targets c_byte_flags.sexp c_native_flags.sexp)
 (action (run ../config/configure.exe)))
