(executable
 (name nqueens)
 (modules nqueens)
 (modes byte_complete native)
 (libraries multicont))

(executable
 (name generic_count)
 (modules generic_count)
 (modes byte_complete native)
 (libraries multicont))

(executable
 (name choice)
 (modules choice)
 (modes byte_complete native)
 (libraries multicont))

(executable
 (name rollback)
 (modules rollback)
 (modes byte_complete native)
 (libraries multicont unix))

(executable
 (name supervised)
 (modules supervised)
 (modes byte_complete native)
 (libraries multicont))

(executable
 (name async)
 (modules async)
 (modes byte_complete native)
 (libraries multicont))

(executable
 (name return)
 (modules return)
 (modes byte_complete native)
 (libraries multicont))

(executable
 (name tautology)
 (modules tautology)
 (modes byte_complete native)
 (libraries multicont))
