(library
 (name multicont_testlib)
 (modes byte best)
 (modules inspect_fiber)
 (foreign_stubs
  (language c)
  (mode byte)
  (flags :standard (:include c_byte_flags.sexp))
  (names inspect_fiber_stubs))
 (foreign_stubs
  (language c)
  (mode native)
  (flags :standard (:include c_native_flags.sexp))
  (names inspect_fiber_stubs)))

(rule
 (targets c_byte_flags.sexp c_native_flags.sexp)
 (action (run ../../config/configure.exe)))

(executable
 (name unique_fibers)
 (modes byte_complete native)
 (modules unique_fibers)
 (libraries multicont multicont_testlib))
